app/certbot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-bot-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - app.mperov.yandexcloud.net
      secretName: letsencrypt-app
  tls:
    - hosts:
      - mperov.yandexcloud.net
      secretName: letsencrypt
  rules:
    - host: mperov.yandexcloud.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: certbot
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: certbot
spec:
  selector:
    app: certbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: certbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certbot
  template:
    metadata:
      labels:
        app: certbot
    spec:
      containers:
      - name: certbot
        image: nginx:latest
        ports:
        - containerPort: 80
